# datacluster

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml  Диаграмма без названия.drawio
api/: Dockerfile  alembic.ini  entrypoint.sh  master.py  requirements.txt
api/v1/: main.py  security.py
api/v1/addresses/: models.py  router.py  schemas.py
api/v1/auth/: models.py  router.py  schemas.py
api/v1/config/: database_conf.py
api/v1/constants/: address_constants.py  error_code_constants.py  payment_constants.py  schedule_constants.py  weekdays_constants.py
api/v1/partners/: models.py  router.py  schemas.py
api/v1/products/: models.py  router.py  schemas.py
api/v1/products_types/: models.py  router.py  schemas.py
api/v1/regions/: models.py  router.py  schemas.py
api/v1/streaming/: router.py
api/v1/streaming/templates/: index.html
api/v1/tables_type/: models.py  router.py  schemas.py
api/v1/tests/: generate_data.py
api/v1/users/: models.py  router.py  schemas.py
api/v1/utils/: db_utils.py
nginx/: Dockerfile  nginx.conf
nginx/datacluster/public/: asset-manifest.json  index.html
nginx/datacluster/public/static/css/: main.40033619.css
nginx/datacluster/public/static/js/: 27.98847184.chunk.js  main.004754dd.js  main.7b62109c.js  main.7b62109c.js.LICENSE.txt
nginx/sites-available/: datacluster.conf
